exports[`Show Solution should be hidden initially 1`] = `
<div
  className="h5p-speak-the-words-solution-area hidden">
  <div
    className="h5p-speak-the-words-correct-answer-text">
    <div />
    <div>
      \"Dart\", \"Vader\"
    </div>
  </div>
</div>
`;

exports[`Show Solution should be shown on show solution event 1`] = `
<div
  className="h5p-speak-the-words-solution-area">
  <div
    className="h5p-speak-the-words-correct-answer-text">
    <div />
    <div>
      \"Dart\", \"Vader\"
    </div>
  </div>
</div>
`;

exports[`Show Solution should contain user answers when specified 1`] = `
<div
  className="h5p-speak-the-words-solution-area">
  <div
    className="h5p-speak-the-words-user-answer-text">
    <div />
    <div>
      \"Luke\", \"SkyWalker\"
    </div>
  </div>
  <div
    className="h5p-speak-the-words-correct-answer-text">
    <div />
    <div>
      \"Dart\", \"Vader\"
    </div>
  </div>
</div>
`;
